fix spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -309,7 +309,6 @@ dialog section {
 .grid {
   display: flex;
   gap: .5em;
-  margin-bottom: 1em;
 }
 
 .grid>* {
